--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <title>测试index目录</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">hello world from xl</div>
 </body>
-<script src="./index.js"></script>
 </html>
