--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>测试index目录</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <div id="root">hello world from xxxxlllll</div>
